# uspto_rejections_kayal_pillay

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Vignettes_Patents_Package.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/uspto_rejections_kayal_pillay/: __init__.py  uspto_rejections_kayal_pillay.py
tests/: test_uspto_rejections_kayal_pillay.py
