[tool.poetry]
name = "uspto_rejections_kayal_pillay"
version = "0.1.0"
description = "Package to interact with the USPTO Rejections API"
authors = ["Kayal Pillay (mmp2227)"]
license = "MIT"
readme = "README.md"
packages = [{include = "uspto_rejections_kayal_pillay", from = "src"}, {include = "src"}]
documentation = 'https://uspto-rejections-kayalpillay.readthedocs.io/en/latest/'
homepage = "https://github.com/KayalPillay/uspto_rejections_kayal_pillay"
repository = "https://github.com/KayalPillay/uspto_rejections_kayal_pillay"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
plotly = "^5.11.0"
plotly-express = "^0.4.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
ipykernel = "^6.19.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src/uspto_rejections_kayal_pillay",
]
